# EasyAlgAE

./: .gitignore  CMakeLists.txt  README.md
demos/: demo_1.cc  demo_2.cc
include/: easy_alg_ae.hpp
tests/: CMakeLists.txt  RandomTest.cc
